name:                BrainFuck
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/leptonyu/BrainFuck#readme
license:             MIT
license-file:        LICENSE
author:              Daniel YU
maintainer:          i@icymint.me
copyright:           2016 Daniel
category:            Libraries
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.BrainFuck
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , mtl
                     , transformers
  default-language:    Haskell2010

executable bf-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -funbox-strict-fields -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , optparse-applicative
                     , BrainFuck
  default-language:    Haskell2010

test-suite bf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BrainFuck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leptonyu/BrainFuck
